helloservice/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloservice
  labels:
    app: helloservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloservice
  template:
    metadata:
      labels:
        app: helloservice
    spec:
      containers:
      - name: helloservice
        image: helloservice:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8888
          name: http
          protocol: TCP
