helloservice/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloservice
spec:
  selector:
    app: helloservice
  ports:
  - name: http
    targetPort: 8888
    port: 8888
